# crispy-computing-machine

./: .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  SECURITY.md  app.js  bash_aliases.sh  bash_helpers.sh  bower.json  functions.php  gitconfig  glossary.txt  gulpfile.js  header.php  helpers.sh  index.html  package.json  packer-builder.sh  packer-manifest.json  page.html  readme.md  scripts  style.css  sus.bash  tmux.conf
.aws/: credentials
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/ciscripts/: lazy.sh  liquid.sh
.github/scripts/: packer-builder.sh
.github/tests/: pr-title-check.sh
.github/workflows/: frontend-build.yml.bak  packer-builder-ccm.yml.bak  packer-builder-cloudinfra.yml  packer-builder-cloudinfra.yml.bak  packer-builder.sh  packer-builder.yml  pr-quality.yml  pr-quality.yml.bak  pr-title-check.yml  prohibit_files.sh  prohibit_files.yml  publish-docker.yml.bak  test.yml.bak
ansible/install-k8s-cluster/: README.md
apps/secubernetes/: .terraform.lock.hcl  README.md  data.tf  droplets.tf  droplets.tf.bak  ec2.tf  key.tf  locals.tf  onion.tf.bak  provider.tf  sg.tf  variables.tf  vpc.tf  vpc.tf.bak
apps/ubernetes/: .terraform.lock.hcl  data.tf  droplets.tf.bak  ec2.tf  (+3 more)
aws_tools/: kite.py  pyproject.toml  setup.cfg  tox.ini
aws_tools/aws_tools/: main.py
aws_tools/test/: test_aws_tools.py
bash/: if.sh
blogs/: Cisco_Panoptica_1.md
coding_examples/: a.out  hello_world.sh  hello_world_forever.sh
graveyard/: bookinfo-gateway-istio-patch.yml  memleak.cpp  pod-init.yml  pod-sidecar.yml  pod.yml  prometheus-values.yml  prometheus.yml
inc/: angular-enqueue.php
my_conf_files/: bash_aliases.sh
openai/: .env.example  Dockerfile  Makefile  README.md  app.py  babbage.py  customer_feedback_curie.py  main.py  requirements.txt
packer/: base_amazon_linux.pkr.hcl  dev.pkrvars.hcl  prod.pkrvars.hcl
python/: twilio.py
python/wof/: README.md  setup.cfg
python/wof/src/wof/: __init__.py  main.py
roots/: belazy.sh  packer-manifest.json
scanner/: setup.py
scripts/: packer-approver.sh  packer-builder.sh  packer-cleanup.sh  packer-share.sh
services/atlassian_backup/: LICENSE.txt  MANIFEST.in  README.md  setup.cfg  tox.ini
services/atlassian_backup/src/: __init__.py
services/atlassian_backup/test/: test_lambda.py  test_protect.py
services/register/: setup.cfg  tox.ini
services/register/src/: __init__.py
services/register/test/: test_create_user.py
services/register/tests/: test_create_user.py
sites/: .gitignore
users/: iman.pub
websites/: .gitmodules  README.md
(+2362 files in other folders)
