[metadata]
name = aws_tools
version = 0.0.1
author = Vihar Chokshi
author_email = vc@iot4.net
description = AWS Tools

[options]
packages = find:
python_requires = >=3.8
install_requires = 
  boto3

[options.extras_require]
test = pytest

[options.packages.find]
where = .
exclude = test

[isort]
profile=black
#extend_skip_glob = *test*
#ensure_newline_before_comments = True
#force_grid_wrap = 0 
#force_to_top = True
#include_trailing_comma = True 
#line_length = 88
#multi_line_output = 3 
#use_parentheses = True 
#wrap_length = 88

[flake8]
max-line-length = 88
select = C,E,F,W,B,B950
extend-ignore = 
	E203
	E501
	
extend-exclude = 
	test
	tests
