[metadata]
name = Wheel-Of-Fortune
version = 0.0.1
author = Vihar Chokshi
author_email = vc@iot4.net
description = A small game
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vchokshi
project_urls =
    Bug Tracker = https://github.com/vchokshi/crispy-computing-machine/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
   wof = wof:spin_wheel
