[metadata]
name = register
version = 0.0.1
author = Vihar Chokshi
author_email = vc@iot4.net
description = Register New Users

[options]
python_requires = >=3.7
packages = 
    src
install_requires =
    boto3
    botocore

[options.entry_points]
console_scripts =
    register = src:main

[isort]
ensure_newline_before_comments = True
force_grid_wrap = 0
force_to_top = True
include_trailing_comma = True
line_length = 88
multi_line_output = 3
use_parentheses = True
wrap_length = 88

[flake8]
ignore = E722, W605,F841
max-line-length = 88
